# blaze

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake-single-platform.yml
assets/shaders/: coords.fs  lighting.fs  test.fs  transform.fs  transform.vs
include/: Blaze.h  Types.h
include/Core/: Camera.h  Input.h  Logger.h  Window.h
include/Graphics/: GLCore.h  Light.h  Material.h  Primitives.h  RenderItem.h  Shader.h  Texture.h
sandbox/: CMakeLists.txt  main.cpp
src/: Blaze.cpp
src/Core/: Camera.cpp  Input.cpp  Logger.cpp  Window.cpp
src/Graphics/: GLCore.cpp  Light.cpp  Material.cpp  Primitives.cpp  RenderItem.cpp  Shader.cpp  Texture.cpp
